--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,27 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 :root {
+	--dark: #161a1b;
+	--dark_overlay: #161a1b56;
+	--light: #4f5561;
+	--dark_red: #260303;
+	--dark_red_overlay: #260303be;
+	--red: #400606;
+	--off_white: #f2f2f2;
+	--white: #ffffff;
+
+	--md_br: 8px;
+	--sm_br: 4px;
+}
+
+hr
+{
+  color: #c2c2c2;
+}
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -11,6 +34,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
 }
 
 a {
@@ -65,4 +89,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
