new changed final

--- a/src/components/sections/side-by-side/side-by-side-styles.css
+++ b/src/components/sections/side-by-side/side-by-side-styles.css
@@ -4,7 +4,7 @@
   position: relative;
 }
 
-.donate-blood-with-Red Blood {
+.donate-blood-with-hemocell {
   background: var(--dark) url("../../../assets/images/blood-donation(3).jpg") no-repeat center;
   background-size: cover;
   position: relative;
