--- a/src/components/sections/form/form-component-styles.css
+++ b/src/components/sections/form/form-component-styles.css
@@ -1,5 +1,5 @@
 .form-wrapper {
-  background: linear-gradient(to right, var(--dark) 0%, var(--dark) 100%), url("../../../assets/images/black texturized Red Blood blood bank.jpg") center/cover no-repeat;
+  background: linear-gradient(to right, var(--dark) 0%, var(--dark) 100%), url("../../../assets/images/black texturized hemocell blood bank.jpg") center/cover no-repeat;
   background-blend-mode: multiply;
   animation: fadeup 1s ease-in-out forwards;
   animation-delay: 0.5s;
