--- a/src/components/sections/form/form-component-styles.scss
+++ b/src/components/sections/form/form-component-styles.scss
@@ -1,6 +1,6 @@
 .form-wrapper {
 	background: linear-gradient(to right, var(--dark) 0%, var(--dark) 100%),
-		url("../../../assets/images/black texturized Red Blood blood bank.jpg")
+		url("../../../assets/images/black texturized hemocell blood bank.jpg")
 			center/cover no-repeat;
 	background-blend-mode: multiply;
 	
